--- a/src/main/webapp/camion/delete-camion.xhtml
+++ b/src/main/webapp/camion/delete-camion.xhtml
@@ -1,90 +1,66 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<f:view>
-    <f:event type="preRenderView" listener="#{remesaController.loadRemesa()}"/>
-    <h:head>
-        <title>Eliminar Remesa - SGE</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-        <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
-    </h:head>
-    <h:body>
-        <div id="wrapper" style="width: 90%;margin: 0 auto;">
-            <div id="headerPage">
-                <div> <!--Encabezado-->
-                    <p:panelGrid id="header" style="width: 100%;">
-                        <p:row>
-                            <p:column style="width: 70%;margin: 0px auto;border: none;">
-                                <h:graphicImage library="images" name="una.png" style="width: 100px;display: block;margin-left:15px;"/>
-                            </p:column>
-                            <p:column style="width: 30%;border: none;">
-                                <h2 style="display: block;margin-right: 10px;">Sistema de Gestión de Remesas</h2>
-                            </p:column>
-                        </p:row>
-                    </p:panelGrid>
-                </div>
-                <div> <!--Inicio Menu-->
-                    <h:form>
-                        <p:menubar>
-                            <p:submenu label="Remesas">
-                                <p:menuitem value="Listar" action="/remesa/list-remesa?faces-redirect=true"/>
-                                <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Agentes">
-                                <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
-                                <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Camiones">
-                                <p:menuitem value="Listar" action="/camion/list-camiones?faces-redirect=true"/>
-                                <p:menuitem value="Nuevo" action="/camion/add-camion?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Empresas">
-                                <p:menuitem value="Listar" action="/empresa/list-empresas?faces-redirect=true"/>
-                                <p:menuitem value="Nueva" action="/empresa/add-empresa?faces-redirect=true"/>
-                            </p:submenu>
-                            <p:submenu label="Informes" rendered="#{userLogged.admin}">
-                                <p:menuitem value="Remesas por Agente" action="/reports/remesas-by-agente?faces-redirect=true"/>
-                                <p:menuitem value="Camiones Utilizados" action="/reports/camiones-utilizados?faces-redirect=true"/>
-                                <p:menuitem value="Empresas por Remesa" action="/reports/empresas-by-remesa?faces-redirect=true"/>
-                            </p:submenu>
 
-                            <f:facet name="options">
-                                <p:commandLink value="#{userLogged.username}" action="#{userController.logout()}"/>
-                            </f:facet>
-                        </p:menubar>
-                    </h:form>
-                </div> <!--Fin Menu-->
-            </div>
-            <div id="contentPage"> <!--Inicia el contenido-->
-                <h4>Eliminar Remesa</h4>
-                <h:form id="deleteForm" style="width: 80%;margin: 5px auto">
-                    <p:growl id="msg" life="3000" showDetail="true"/>
-                    <p:panel header="¿Estás seguro de que deseas eliminar esta remesa?">
-                        <p:outputLabel value="ID: #{remesaController.remesa.id}" style="display: block; margin-top: 10px;"/>
-                        <p:outputLabel value="Tipo: #{remesaController.remesa.type}" style="display: block;"/>
-                        <p:outputLabel value="Fecha: #{remesaController.remesa.date}" style="display: block;"/>
-                        <p:outputLabel value="Hora: #{remesaController.remesa.time}" style="display: block;"/>
-                        <p:outputLabel value="Estado: #{remesaController.remesa.status}" style="display: block;"/>
-                        <p:outputLabel value="Camión: #{remesaController.remesa.camion.licensePlate}" style="display: block;"/>
-                        <p:outputLabel value="Agente: #{remesaController.remesa.agente.name}" style="display: block;"/>
-                        <p:separator/>
-                        <p:panelGrid columns="2" style="margin-top: 20px;">
-                            <p:commandButton value="Eliminar" icon="pi pi-check" styleClass="ui-button-danger"
-                                             action="#{remesaController.deleteRemesa(remesaController.remesa.id)}" update="msg"/>
-                            <p:commandButton value="Cancelar" icon="pi pi-times" onclick="window.history.back();" styleClass="ui-button-secondary"/>
-                        </p:panelGrid>
-                    </p:panel>
-                </h:form>
-            </div> <!--fin del contenido-->
-            <div id="footerPage">
-                <hr/>
-                <p>&copy;2024 Universidad Nacional. Todos los derechos reservados</p>
-            </div>
-        </div>
-    </h:body>
-</f:view>
+<h:head>
+    <title>Listado de Camiones</title>
+</h:head>
+<h:body>
+
+    <h:form>
+
+        <h:panelGrid columns="2">
+            <h:outputLabel value="Lista de Camiones" for="camionesTable" />
+        </h:panelGrid>
+
+        <p:dataTable id="camionesTable" value="#{camionController.camiones}" var="camion">
+
+            <p:column headerText="Placa">
+                <h:outputText value="#{camion.licensePlate}" />
+            </p:column>
+
+            <p:column headerText="Número de Unidad">
+                <h:outputText value="#{camion.unitNumber}" />
+            </p:column>
+
+            <p:column headerText="Marca">
+                <h:outputText value="#{camion.brand}" />
+            </p:column>
+
+            <p:column headerText="Color">
+                <h:outputText value="#{camion.color}" />
+            </p:column>
+
+            <p:column headerText="Modelo">
+                <h:outputText value="#{camion.model}" />
+            </p:column>
+
+            <p:column headerText="Tipo">
+                <h:outputText value="#{camion.type}" />
+            </p:column>
+
+            <p:column headerText="Acciones">
+                <p:commandButton value="Eliminar"
+                                 action="#{camionController.deleteCamion(camion.id)}"
+                                 update="camionesTable"
+                                 oncomplete="PF('dlg').hide();"
+                                 icon="pi pi-trash"
+                                 onclick="return confirm('¿Estás seguro de que deseas eliminar este camión?');" />
+            </p:column>
+
+        </p:dataTable>
+
+        <p:dialog header="Confirmación" widgetVar="dlg" modal="true" closable="false">
+            <h:outputText value="¿Estás seguro de que deseas eliminar este camión?" />
+            <p:commandButton value="Sí"
+                             action="#{camionController.deleteCamion(camion.id)}"
+                             update="camionesTable"
+                             oncomplete="PF('dlg').hide();" />
+            <p:commandButton value="No" onclick="PF('dlg').hide();" type="button" />
+        </p:dialog>
+
+    </h:form>
+
+</h:body>
 </html>
