--- a/src/main/webapp/camion/list-camion.xhtml
+++ b/src/main/webapp/camion/list-camion.xhtml
@@ -1,39 +1,41 @@
-<!-- loadCamiones.xhtml -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
+
 <h:head>
-    <title>Lista de Camiones</title>
+    <title>Listado de Camiones</title>
 </h:head>
 <h:body>
     <h:form>
-        <h1>Lista de Camiones</h1>
+        <h:panelGrid columns="2">
+            <h:outputLabel value="Lista de Camiones" for="camionesTable" />
+            <p:commandButton value="Actualizar" action="#{camionController.loadCamiones()}" update="camionesTable" />
+        </h:panelGrid>
 
-        <p:messages autoUpdate="true" />
+        <p:dataTable id="camionesTable" value="#{camionController.camiones}" var="camion" editable="true">
 
-        <p:dataTable value="#{camionController.camiones}" var="camion" paginator="true" rows="10">
-            <p:column headerText="licensePlate">
+            <p:column headerText="Placa">
                 <h:outputText value="#{camion.licensePlate}" />
             </p:column>
 
-            <p:column headerText="unitNumber">
+            <p:column headerText="Número de Unidad">
                 <h:outputText value="#{camion.unitNumber}" />
             </p:column>
 
-            <p:column headerText="brand">
+            <p:column headerText="Marca">
                 <h:outputText value="#{camion.brand}" />
             </p:column>
 
-            <p:column headerText="color">
+            <p:column headerText="Color">
                 <h:outputText value="#{camion.color}" />
             </p:column>
 
-            <p:column headerText="model">
+            <p:column headerText="Modelo">
                 <h:outputText value="#{camion.model}" />
             </p:column>
 
-            <p:column headerText="type">
+            <p:column headerText="Tipo">
                 <h:outputText value="#{camion.type}" />
             </p:column>
         </p:dataTable>
