--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui">
 <f:view>
     <h:head>
-        <title>Sistema de Gestión de Remesas</title>
+        <title>Home - SGR - Remmitance Trucks CR</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
     </h:head>
