--- a/src/main/webapp/remesa/list-remesa.xhtml
+++ b/src/main/webapp/remesa/list-remesa.xhtml
@@ -22,7 +22,7 @@
                                 <h:graphicImage library="images" name="una.png" style="width: 100px;display: block;margin-left:15px;"/>
                             </p:column>
                             <p:column style="width: 30%;border: none;">
-                                <h2 style="display: block;margin-right: 10px;">Sistema de Gestión de Remesas</h2>
+                                <h2 style="display: block;margin-right: 10px;">Lista remesas - SGR - Remmitance Trucks CR</h2>
                             </p:column>
                         </p:row>
                     </p:panelGrid>
