--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui">
 <f:view>
     <h:head>
-        <title>Sistema de Gestión Educativa</title>
+        <title>Remmitance Trucks CR - SGR - Inicio de sesión</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     </h:head>
     <h:body>
