--- a/src/main/webapp/remesa/update-remesa.xhtml
+++ b/src/main/webapp/remesa/update-remesa.xhtml
@@ -8,7 +8,7 @@
 <f:view>
     <f:event type="preRenderView" listener="#{remesaController.loadRemesa()}"/>
     <h:head>
-        <title>Actualizar Remesa - SGE</title>
+        <title>Actualizar Remesa - SGR - Remmitance Trucks CR</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
     </h:head>
