--- a/src/main/webapp/empresa/list-empresa.xhtml
+++ b/src/main/webapp/empresa/list-empresa.xhtml
@@ -4,40 +4,29 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-    <title>Listado de Camiones</title>
+    <title>Listado de Empresas</title>
 </h:head>
 <h:body>
     <h:form>
         <h:panelGrid columns="2">
-            <h:outputLabel value="Lista de Camiones" for="camionesTable" />
-            <p:commandButton value="Actualizar" action="#{camionController.loadCamiones()}" update="camionesTable" />
+            <h:outputLabel value="Lista de Empresas" for="empresasTable" />
+            <p:commandButton value="Actualizar" action="#{empresaController.loadEmpresas()}" update="camionesTable" />
         </h:panelGrid>
 
-        <p:dataTable id="camionesTable" value="#{camionController.camiones}" var="camion" editable="true">
+        <p:dataTable id="empresasTable" value="#{empresaController.empresas}" var="camion" editable="true">
 
-            <p:column headerText="Placa">
-                <h:outputText value="#{camion.licensePlate}" />
+            <p:column headerText="Nombre">
+                <h:outputText value="#{camion.companyName}" />
             </p:column>
 
-            <p:column headerText="Número de Unidad">
-                <h:outputText value="#{camion.unitNumber}" />
+            <p:column headerText="direccion">
+                <h:outputText value="#{camion.address}" />
             </p:column>
 
-            <p:column headerText="Marca">
-                <h:outputText value="#{camion.brand}" />
+            <p:column headerText="Contacto">
+                <h:outputText value="#{camion.contact}" />
             </p:column>
 
-            <p:column headerText="Color">
-                <h:outputText value="#{camion.color}" />
-            </p:column>
-
-            <p:column headerText="Modelo">
-                <h:outputText value="#{camion.model}" />
-            </p:column>
-
-            <p:column headerText="Tipo">
-                <h:outputText value="#{camion.type}" />
-            </p:column>
         </p:dataTable>
     </h:form>
 </h:body>
