--- a/src/main/webapp/remesa/list-remesa.xhtml
+++ b/src/main/webapp/remesa/list-remesa.xhtml
@@ -8,7 +8,7 @@
 <f:view>
     <f:event type="preRenderView" listener="#{remesaController.loadRemesas()}"/>
     <h:head>
-        <title>Lista de Remesas - SGE</title>
+        <title>Lista de Remesas - SGR</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
     </h:head>
