--- a/src/main/webapp/agente/add-agente.xhtml
+++ b/src/main/webapp/agente/add-agente.xhtml
@@ -5,6 +5,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
+<h:outputScript library="primefaces" name="primefaces.js" target="body"/>
+<h:outputScript library="primefaces" name="core.js" target="body"/>
+<h:outputScript library="primefaces" name="jquery/jquery.js" target="body"/>
+
 <f:view>
     <f:event type="preRenderView" listener="#{agenteController.loadAgentes()}"/>
     <h:head>
