--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -34,8 +34,8 @@
                                 <p:menuitem value="Nueva" action="/remesa/add-remesa?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Agentes">
-                                <p:menuitem value="Listar" action="/agente/list-agentes?faces-redirect=true"/>
-                                <p:menuitem value="Nuevo" action="/agente/add-agente?faces-redirect=true"/>
+                                <p:menuitem value="Listar" action="/Agente/list-agentes?faces-redirect=true"/>
+                                <p:menuitem value="Nuevo" action="/Agente/add-agente?faces-redirect=true"/>
                             </p:submenu>
                             <p:submenu label="Camiones">
                                 <p:menuitem value="Listar" action="/camion/list-camiones?faces-redirect=true"/>
