--- a/src/main/webapp/remesa/add-remesa.xhtml
+++ b/src/main/webapp/remesa/add-remesa.xhtml
@@ -87,7 +87,7 @@
 
                     </p:panelGrid>
 
-                    <p:commandButton value="Guardar Remesa" action="#{remesaController.saveRemesa()}" process="@form" update="@form:msg" oncomplete="PF('msg').show();" icon="fa fa-save" />
+                    <p:commandButton value="Guardar Remesa" action="#{remesaController.saveRemesa()}" process="@form" update="@form:msg" icon="fa fa-save" />
 
                 </h:form>
             </div> <!--fin del contenido-->
