--- a/src/main/webapp/remesa/add-remesa.xhtml
+++ b/src/main/webapp/remesa/add-remesa.xhtml
@@ -36,7 +36,7 @@
             <p:inputText id="agente" value="#{remesaController.remesa.agente}" required="true" />
 
         </h:panelGrid>
-        <p:commandButton value="Guardar Remesa" action="#{remesaController.saveRemesa()}" update="@form" />
+        <p:commandButton value="Guardar Remesa" action="#{remesaController.saveRemesa}" update="@form" />
     </h:form>
 </h:body>
 </html>
